# SOGLR-ModelViewer

./: .gitmodules  CMakeLists.txt
models/primitives/: Sphere.fbx
shaders/: diffuseShader.glsl  vertexShader.glsl
src/: main.cpp
